/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message NavigationImageOptions {
  required int32 width = 1;
  required int32 height = 2;
  required int32 colour_depth_bits = 3;
  required int32 dunno = 4;
}
